<resources>

    <!-- APP LEGAL INFORMATION-->
    <string name="app_name">My QCM</string>
    <string name="app_name_value">Nom : <b>My QCM</b></string>
    <string name="app_version">Version : <b>1.0</b></string>
    <string name="app_creation">Date de publication : <b>08/07/2016</b></string>
    <string name="app_creator">Développer par : <b>Antoine Trouvé</b></string>
    <string name="app_creator_email">Contact : <b>antoinetrouve.france@gmail.com</b></string>
    <string name="app_copyright">Copyright 2016 <b>Institut Informatique Appliquée</b></string>


    <!-- LOGIN ACTIVITY -->
    <string name="title">MY QCM APPLICATION</string>
    <string name="et_connexion_login">connexion</string>
    <string name="et_connexion_password">password</string>
    <string name="bt_connexion">Entrez !</string>

    <!-- NAVIGATION BAR -->
    <string name="title_activity_menu">Accueil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_title">My QCM</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_rules">Règles</string>
    <string name="nav_legalMention">Mention légale</string>
    <string name="nav_help">Aide</string>
    <string name="nav_disconnect">Déconnexion</string>
    <string name="nav_btnMain">Main</string>
    <string name="nav_btnProfil">Profil</string>
    <string name="nav_btnHelp">Help</string>
    <string name="nav_btnLegalMention">Mention legal</string>
    <string name="nav_btnRules">Rules</string>
    <string name="nav_accueil">Accueil</string>

    <!-- QCM Activity -->
    <string name="title_activity_qcm">QcmActivity</string>

    <!-- RESULT ACTIVITY -->
    <string name="title_activity_result">ResultActivity</string>

    <!-- RULES FRAGMENT-->
    <string name="rules_title">Règle de MyQCM</string>
    <string name="rules_timer"><b>Règle n°1 - Le timer :</b> Un compte a rebours se déclenche au démarrage du questionnaire sélectionné.</string>
    <string name="rules_timer2"><b>Règle n°2 - La fin du timer :</b> Le timer prend fin à la validation du questionnaire - OU - si celui-ci arrive a 0.</string>
    <string name="rules_result"><b>Règle n°3 - Le calcul des points :</b> 1 question = 1 point. Pour les questions à réponses multiples, toutes les réponses doivent être cochées pour valider le point.</string>
    <string name="rules_moreInfo"><b>Informations supplémentaires:</b> Veuillez contacter votre administrateur pour de plus amples explications.</string>

    <!-- HELP FRAGMENT-->
    <string name="help_title">FAQ</string>
    <string name="help_accessMcq"><b>Comment accéder aux questionnaires : </b> Veuillez sélectionner un élément dans la liste visible sur la page de démarrage. Pour chaque catégorie, une liste de questionnaires est disponible.Sélectionnez en un pour commencer à y répondre.</string>
    <string name="help_timer"><b>Le décompte a stoppé mon questionnaire ! :</b> Si le timer est arrivé à 0, le temps imparti pour répondre au questionnaire est terminé. Le questionnaire est validé avec la dernière réponse sélectionnée.</string>
    <string name="help_WithoutData"><b>Je ne vois pas de catégories et/ou de questionnaires :</b> Certaines informations sont manquantes, veuillez contacter votre administrateur.</string>
    <string name="help_InfoUser"><b>Comment changer mes informations personnelles ?</b> Pour tout changement lié à votre compte utilisateur, veuillez contacter votre administrateur.</string>
    <string name="title_activity_questionnaire">QuestionnaireActivity</string>

    <!--QUESTIONNAIRE-->
    <string name="navigation_next_questionnaire">Suivant</string>
    <string name="navigation_previous_questionnaire">Précédent</string>

</resources>
